# snake_game

./: CMakeLists.txt  audio.cpp  audio.h  challenge.cpp  challenge.h  common.h  config.cpp  config.h  game.cpp  game.h  leaderboard.cpp  leaderboard.h  main.cpp  snake_sdl_cfg  snake_sdl_cfg.cpp
